[package]
name = "hatmil"
version = "0.14.0"
description = "User-friendly HTML builder"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hatmil"
repository = "https://github.com/DougLau/hatmil"
readme = "README.md"
keywords = ["html", "svg", "builder", "generator"]
categories = ["web-programming", "encoding"]
edition = "2024"

[dependencies]
